dark mode button fix

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
     position: fixed;
     top: 20px;
     right: 40px;
-    background: #e7e7e7;
+    background: #7abfff;
     border: none;
     padding: 10px 20px;
     border-radius: 5px;
